--- a/Jungnami/Jungnami/JH/Storyboard/Sub.storyboard
+++ b/Jungnami/Jungnami/JH/Storyboard/Sub.storyboard
@@ -497,7 +497,10 @@
                                                     <constraint firstAttribute="width" constant="24" id="LVe-EZ-2OO"/>
                                                     <constraint firstAttribute="height" constant="24" id="cKF-hQ-y2V"/>
                                                 </constraints>
-                                                <state key="normal" image="mypage_left_arrow"/>
+                                                <state key="normal" image="mypage_x"/>
+                                                <connections>
+                                                    <action selector="dismissBtn:" destination="k0w-Vt-AO2" eventType="touchUpInside" id="xz8-c3-yPM"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gsD-ZE-5S6">
                                                 <rect key="frame" x="329" y="28" width="30" height="30"/>
